compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__inlining__inline_variable_shadowing_case_pattern.snap
---
source: compiler-core/src/erlang/tests/inlining.rs
expression: "\npub fn sum() {\n  case 1, 2 {\n    a, b -> fn(x) {\n      let a = 7\n      x + a\n    }(a + b)\n  }\n}\n"
---
----- SOURCE CODE

pub fn sum() {
  case 1, 2 {
    a, b -> fn(x) {
      let a = 7
      x + a
    }(a + b)
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([sum/0]).

-spec sum() -> integer().
sum() ->
    case {1, 2} of
        {A, B} ->
            _inline_a_0 = 7,
            (A + B) + _inline_a_0
    end.
