compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__inlining__inlining_works_through_blocks.snap
---
source: compiler-core/src/erlang/tests/inlining.rs
expression: "\npub fn main() {\n    { fn(x) { Ok(x + 1) } }(41)\n}\n"
---
----- SOURCE CODE

pub fn main() {
    { fn(x) { Ok(x + 1) } }(41)
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> {ok, integer()} | {error, any()}.
main() ->
    {ok, 41 + 1}.
